--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/main.css" type="text/css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,700" type="text/css">
 </head>
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <div class="hero container-fluid bridge"></div>
+    <div class="container-fluid hero bridge"></div>
 
     <div id="contact" class="container-fluid hero">
         <h2>Contact Me</h2>
